Core/objects/TrailheadEntityEvent__e/TrailheadEntityEvent__e.object-meta.xml
<CustomObject>
    <description>Platform event fired when a the values of one or more tracked fields on a Badge or Trail is updated.</description>
    <label>Trailhead Entity Event</label>
    <pluralLabel>Trailhead Entity Events</pluralLabel>
</CustomObject>