Core/objects/TrailheadEntityEvent__e/fields/APIName__c.field-meta.xml
<CustomField>
    <fullName>APIName__c</fullName>
    <description>Value of trailheadapp__API_Name__c field on trailheadapp__Badge__c or trailheadapp__Trail__c.</description>
    <label>API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>