Core/objects/TrailheadEntityEvent__e/fields/EntityType__c.field-meta.xml
<CustomField>
    <fullName>EntityType__c</fullName>
    <description>Type of Trailhead entity (trailheadapp__Badge__c or trailheadapp__Trail__c) that event corresponds to.</description>
    <label>Entity Type</label>
    <length>22</length>
    <required>true</required>
    <type>Text</type>
</CustomField>