Core/objects/TrailheadEntityEvent__e/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <description>New value of trailheadapp__Icon__c on trailheadapp__Badge__c or trailheadapp__Trail__c.</description>
    <label>Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>