Core/objects/TrailheadEntityEvent__e/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>Type of operation to perform with changes to Trailhead entity.</description>
    <label>Operation</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>